@@ -1,34 +1,34 @@
 package org.example.superapiv1.DTO;
-
 import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import org.example.superapiv1.entities.Actor;
 import org.example.superapiv1.entities.Movie;
+import org.example.superapiv1.validation.OnCreate;
+import org.example.superapiv1.validation.OnUpdate;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ActorDTO {
 
+
     private Long id;
 
-    @NotBlank(message = "O nome não pode estar vazio.")
+    @NotBlank(message = "O nome não pode estar vazio.", groups = {OnCreate.class, OnUpdate.class})
     @Size(min = 2, max = 100, message = "O nome deve ter entre 2 e 100 caracteres.")
     private String name;
 
-    @NotNull(message = "Todo mundo tem uma comida favorita")
+    @NotNull(message = "Todo mundo tem uma comida favorita", groups = {OnCreate.class, OnUpdate.class})
     private String favoriteFood;
 
-    @NotNull(message = "A idade é obrigatória.")
+    @NotNull(message = "A idade é obrigatória.", groups = {OnCreate.class, OnUpdate.class})
     @Min(value = 0, message = "A idade não pode ser negativa.")
     private int age;
 
     private List<Long> movieIds;
 
     private List<MovieDTO> movies;
-
 
     public ActorDTO() {}
 
@@ -39,10 +39,10 @@ public class ActorDTO {
         this.age = actor.getAge();
         this.movieIds = actor.getActedMovies().stream()
                 .map(Movie::getId)
-                .collect(Collectors.toList());
+                .toList();
         this.movies = actor.getActedMovies().stream()
-                .map(movie -> new MovieDTO(movie))
-                .collect(Collectors.toList());
+                .map(MovieDTO::new)
+                .toList();
     }
 
 
